--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -18,7 +18,7 @@ body{
   margin: 20px 0 20px 0;
 }
 
-.notes{
+.note{
   margin: 20px;
 }
 
@@ -28,4 +28,7 @@ body{
   padding: 0 5px 0 5px;
   width: 20px;
   text-align: center;
+
+  position: relative;
+  top: -20px;
 }
