--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -21,7 +21,7 @@
 .icon-position{
   position: relative;
   width: 0;
-  height: 0
+  height: 0;
 }
 
 .icon{
@@ -30,7 +30,7 @@
   height: 20px;
   line-height: 9px;
   position: relative;
-  top: -22px;
+  top: -23px;
   width: 20px;
 }
 
