--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -21,8 +21,8 @@
   border: 1px solid black;
   border-radius: 10px;
   height: 20px;
-  left: 20px;
   line-height: 9px;
+  margin-left: 10px;
   position: relative;
   width: 20px;
 }
@@ -61,7 +61,7 @@
   background-color: #fff;
   border-radius: 10px;
   border: 1px solid black;
-  position: absolute;
+  //position: absolute;
 }
 
 .highlight{
