Added information about types. Input is being submitted.

--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -59,9 +59,13 @@
 
 .input-container{
   background-color: #fff;
-  border-radius: 10px;
   border: 1px solid black;
-  //position: absolute;
+  padding: 5px;
+  position: absolute;
+}
+
+.input-text{
+  width: 100%;
 }
 
 .highlight{
