--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -68,6 +68,19 @@
   width: 100%;
 }
 
+.plain-button{
+  border: 1px solid black;
+  float: right;
+  padding: 0 5px;
+  position: relative;
+  right: 0;
+  top: 0;
+}
+
+.plain-button:hover{
+  background: #ddd;
+}
+
 .highlight{
   background-color: #ff0;
 }
