--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -6,11 +6,11 @@
  */
 
 .highlight{
-  background-color: #ff9500;
+  background-color: #eaf;
 }
 
 .hover-line:hover{
-  background: #ffddaa;
+  background: #fcf;
   cursor: pointer;
 }
 
@@ -25,23 +25,23 @@
 
 .highlight-details{box-shadow: 0 0 5px 3px #88e;}
 .highlight-corrections{box-shadow: 0 0 5px 3px #e88;}
-.highlight-methods{box-shadow: 0 0 5px 3px #e8e;}
+.highlight-methods{box-shadow: 0 0 5px 3px #ff9500;}
 .highlight-command{box-shadow: 0 0 5px 3px #8e8;}
 
-.icon-details:hover{background-color: #ddf;}
-.icon-corrections:hover{background-color: #fdd;}
-.icon-methods:hover{background-color: #fdf;}
-.icon-command:hover{background-color: #dfd;}
+.icon-details:hover{background-color: #eef;}
+.icon-corrections:hover{background-color: #fee;}
+.icon-methods:hover{background-color: #fec;}
+.icon-command:hover{background-color: #efe;}
 
 .note{
   margin: 10px;
   padding: 10px;
 }
 
-.note-details{background-color: #ddf;}
-.note-corrections{background-color: #fdd;}
-.note-methods{background-color: #fdf;}
-.note-command{background-color: #dfd;}
+.note-details{background-color: #eef;}
+.note-corrections{background-color: #fee;}
+.note-methods{background-color: #fec;}
+.note-command{background-color: #efe;}
 
 .input-start-container{
   bottom: 20px;
