added floating header

--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -5,6 +5,13 @@
  *
  */
 
+.header{
+  background-color: #fff;
+  border: 1px solid black;
+  padding: 10px;
+  position: fixed;
+}
+
 .highlight{
   background-color: #eaf;
 }
