--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -4,12 +4,20 @@
  *  sandbox for various experiments and other stuff that should be refactored in the future
  *
  */
+html,body{
+  background-color: #e0e0e0;
+}
+
+.content{
+  background-color: #fff;
+}
 
 .header{
-  background-color: #fff;
-  border: 1px solid black;
+  background-color: #e0e0e0;
   padding: 10px;
   position: fixed;
+  width: 100%;
+  z-index: 2;
 }
 
 .icon{
