--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -32,6 +32,26 @@ html,body{
   width: 20px;
 }
 
+[tooltip]:before {
+  content : attr(tooltip);
+  opacity : 0;
+  position : absolute;
+
+  background-color: #000;
+  border-radius: 10px;
+  color: #fff;
+  margin-left: -30px;
+  margin-top: 15px;
+  padding: 10px;
+  pointer-events: none;
+  transition: all 0.1s ease;
+}
+
+[tooltip]:hover:before {
+  opacity : 1;
+  transition-delay: 0.5s;
+}
+
 .selected-step{background-color: #FFFFCC;}
 
 .highlight-details{box-shadow: 0 0 5px 3px #88e;}
