working with icons

--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -22,6 +22,10 @@ html,body{
   z-index: 2;
 }
 
+.main-content{
+  padding: 0 0 0 5px;
+}
+
 .icon{
   background-repeat: no-repeat;
   background-size: 16px;
@@ -32,7 +36,7 @@ html,body{
   width: 24px;
 }
 
-.icon:hover{border: 1px solid #e0e0e0;}
+.selected, .icon:hover{border: 1px solid #e0e0e0;}
 .icon:focus {outline:0;}
 
 [tooltip]:before {
@@ -55,12 +59,12 @@ html,body{
   transition-delay: 0.5s;
 }
 
-.selected-step{background-color: #FFFFCC;}
+.selected-step{background-color: #FFFFEE;}
 
-.highlight-details{box-shadow: 0 0 5px 3px #88e;}
-.highlight-corrections{box-shadow: 0 0 5px 3px #e88;}
-.highlight-methods{box-shadow: 0 0 5px 3px #ff9500;}
-.highlight-command{box-shadow: 0 0 5px 3px #8e8;}
+.highlight-details{box-shadow: 0 0 0 3px #88e;}
+.highlight-corrections{box-shadow: 0 0 0 3px #e88;}
+.highlight-methods{box-shadow: 0 0 0 3px #ff9500;}
+.highlight-command{box-shadow: 0 0 0 3px #8e8;}
 
 .icon-details{
   background-image: url(../images/PNG/pin.png);
@@ -84,20 +88,35 @@ html,body{
   background-position: 4px 2px;
 }
 
-.icon-details:hover{background-color: #eef;}
-.icon-corrections:hover{background-color: #fee;}
-.icon-methods:hover{background-color: #fec;}
-.icon-command:hover{background-color: #efe;}
+.selected-details, .icon-details:hover{background-color: #eef;}
+.selected-corrections, .icon-corrections:hover{background-color: #fee;}
+.selected-methods, .icon-methods:hover{background-color: #fec;}
+.selected-command, .icon-command:hover{background-color: #efe;}
 
 .note{
+  background-position: left 0 top 0, left 5px top 5px;
+  background-repeat: no-repeat;
+  background-size: inherit, 30px 30px;
+  border: 1px solid #e0e0e0;
   margin: 10px;
   padding: 10px;
 }
 
-.note-details{background-color: #eef;}
-.note-corrections{background-color: #fee;}
-.note-methods{background-color: #fec;}
-.note-command{background-color: #efe;}
+.note-details{
+  background-image: linear-gradient(rgba(238,238,255,0.9), rgba(238,238,255,0.9)), url(../images/PNG/pin.png);
+}
+
+.note-corrections{
+  background-image: linear-gradient(rgba(255,238,238,0.9), rgba(255,238,238,0.9)), url(../images/PNG/healing.png);
+}
+
+.note-methods{
+  background-image: linear-gradient(rgba(255,238,204,0.9), rgba(255,238,204,0.9)), url(../images/PNG/fork.png);
+}
+
+.note-command{
+  background-image: linear-gradient(rgba(238,255,238,0.9), rgba(238,255,238,0.9)), url(../images/PNG/clippy.png);
+}
 
 .input-start{
   background-color: #fff;
