--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -67,11 +67,6 @@ img{
 
 .selected-step{background-color: #FFFFEE;}
 
-.highlight-details{box-shadow: 0 0 0 3px #88e;}
-.highlight-corrections{box-shadow: 0 0 0 3px #e88;}
-.highlight-methods{box-shadow: 0 0 0 3px #ff9500;}
-.highlight-command{box-shadow: 0 0 0 3px #8e8;}
-
 .icon-details{
   background-image: url(../images/PNG/pin.png);
   background-size: 17px;
@@ -89,7 +84,7 @@ img{
   background-position: 4px 3px;
 }
 
-.icon-command{
+.icon-other{
   background-image: url(../images/PNG/clippy.png);
   background-position: 4px 2px;
 }
@@ -97,7 +92,7 @@ img{
 .selected-details, .icon-details:hover{background-color: #eef;}
 .selected-corrections, .icon-corrections:hover{background-color: #fee;}
 .selected-methods, .icon-methods:hover{background-color: #fec;}
-.selected-command, .icon-command:hover{background-color: #efe;}
+.selected-other, .icon-other:hover{background-color: #efe;}
 
 .note{
   background-position: left 0 top 0, left 5px top 5px;
@@ -108,10 +103,16 @@ img{
   padding: 10px;
 }
 
+.note-author{
+  font-size: 75%;
+  font-style: italic;
+  text-align: right;
+}
+
 .note-details{background-image: linear-gradient(rgba(238,238,255,0.9), rgba(238,238,255,0.9)), url(../images/PNG/pin.png);}
 .note-corrections{background-image: linear-gradient(rgba(255,238,238,0.9), rgba(255,238,238,0.9)), url(../images/PNG/healing.png);}
 .note-methods{background-image: linear-gradient(rgba(255,238,204,0.9), rgba(255,238,204,0.9)), url(../images/PNG/fork.png);}
-.note-command{background-image: linear-gradient(rgba(238,255,238,0.9), rgba(238,255,238,0.9)), url(../images/PNG/clippy.png);}
+.note-other{background-image: linear-gradient(rgba(238,255,238,0.9), rgba(238,255,238,0.9)), url(../images/PNG/clippy.png);}
 
 .input-start{
   background-color: #fff;
@@ -119,8 +120,11 @@ img{
   background-size: 22px;
   background-position: 4px 3px;
   height: 30px;
-  position: absolute;
   width: 30px;
+}
+
+.question-start{
+  background-image: url(../images/PNG/tag-add-white-question.png);
 }
 
 .input-start:hover{background-color: #f5f5f5;}
