--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -79,13 +79,13 @@ img{
 }
 
 .icon-methods{
-  background-image: url(../images/PNG/fork.png);
+  background-image: url(../images/PNG/question.png);
   background-size: 14px;
   background-position: 4px 3px;
 }
 
 .icon-other{
-  background-image: url(../images/PNG/clippy.png);
+  background-image: url(../images/PNG/other.png);
   background-position: 4px 2px;
 }
 
@@ -111,8 +111,8 @@ img{
 
 .note-details{background-image: linear-gradient(rgba(238,238,255,0.9), rgba(238,238,255,0.9)), url(../images/PNG/pin.png);}
 .note-corrections{background-image: linear-gradient(rgba(255,238,238,0.9), rgba(255,238,238,0.9)), url(../images/PNG/healing.png);}
-.note-methods{background-image: linear-gradient(rgba(255,238,204,0.9), rgba(255,238,204,0.9)), url(../images/PNG/fork.png);}
-.note-other{background-image: linear-gradient(rgba(238,255,238,0.9), rgba(238,255,238,0.9)), url(../images/PNG/clippy.png);}
+.note-methods{background-image: linear-gradient(rgba(255,238,204,0.9), rgba(255,238,204,0.9)), url(../images/PNG/question.png);}
+.note-other{background-image: linear-gradient(rgba(238,255,238,0.9), rgba(238,255,238,0.9)), url(../images/PNG/other.png);}
 
 .input-start{
   background-color: #fff;
@@ -120,11 +120,13 @@ img{
   background-size: 22px;
   background-position: 4px 3px;
   height: 30px;
+  position: absolute;
   width: 30px;
 }
 
 .question-start{
   background-image: url(../images/PNG/tag-add-white-question.png);
+  margin-left: 35px;
 }
 
 .input-start:hover{background-color: #f5f5f5;}
