--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -52,8 +52,8 @@ img{
   background-color: #000;
   border-radius: 10px;
   color: #fff;
-  margin-left: -30px;
-  margin-top: 15px;
+  margin-left: -10px;
+  margin-top: -40px;
   padding: 10px;
   pointer-events: none;
   transition: all 0.1s ease;
@@ -61,11 +61,11 @@ img{
 
 [tooltip]:hover:before {
   opacity : 1;
-  transition-delay: 0.5s;
+  /*transition-delay: 0.5s;*/
   white-space: nowrap;
 }
 
-.selected-step{background-color: #FFFFEE;}
+.selected-step{background-color: #ffffe0;}
 
 .icon-details{
   background-image: url(../images/PNG/pin.png);
@@ -167,6 +167,13 @@ img{
   background: #ddd;
 }
 
+.reply-button{
+  background: #fff;
+  clear: both;
+  float: left;
+  font-size: 0.8em;
+}
+
 .baseline-container{
   background-color: #fff;
   border: 1px solid #9b9b9b;
@@ -174,8 +181,35 @@ img{
   overflow-y: auto;
   padding: 10px;
   position: fixed;
+
+  h2{
+    margin: 0 10px;
+  }
 }
 
 .baseline-content{
   background-color: #fff;
+}
+
+.comment-footer{
+  padding-top: 5px;
+}
+
+.submit-comment-container{
+  border-top: solid 1px #aaa;
+  margin: 10px;
+
+  h2{
+    margin: 10px 0;
+  }
+}
+
+h1{
+  font-size: 130%;
+  font-weight: bold;
+}
+
+h2{
+  font-size: 110%;
+  font-weight: bold;
 }
