--- a/app/scripts/templates/note.html
+++ b/app/scripts/templates/note.html
@@ -1,1 +1,6 @@
-<div>I'm a note!</div>
+<div>Note category: {{note.extra_info}}</div>
+<div>{{note.content}}</div>
+<div class="comment-footer">
+    <div class="plain-button reply-button" ng-click="addingReply($index, $event, note.id, note.author, note.step_id)" ng-if="(note.extra_info|lowercase) === 'question'">Post Answer</div>
+    <div class="note-author">Submitted by {{note.author}}</div>
+</div>
