cleaning up html for notes

--- a/app/scripts/templates/note.html
+++ b/app/scripts/templates/note.html
@@ -1,9 +1,18 @@
-<div class="note" ng-class="note.category === 'corrections' ? 'note-corrections' :
-    (note.category === 'methods' ? 'note-methods' : (note.category === 'details' ? 'note-details' : 'note-other'))">
-    <div>Note category: {{note.category}}<div ng-if="note.category === 'other'">: {{note.extra_info}}</div></div>
+<div class="note" ng-class="
+    note.category === 'corrections' ? 'note-corrections' :
+    (note.category === 'methods' ? 'note-methods' :
+    (note.category === 'details' ? 'note-details' :
+    (note.category === 'other' ? 'note-other' : '')))">
+
+    <div ng-if="note.category === 'methods'">Note relevant for: {{note.extra_info}}</div>
+    <div ng-if="note.category === 'other'">Note category: {{note.extra_info}}</div>
     <div>{{note.content}}</div>
     <div class="comment-footer">
-        <div class="plain-button reply-button" ng-click="addingReply($index, $event, note.id, note.author, note.step_id)" ng-if="(note.extra_info|lowercase) === 'question'">Post Answer</div>
+        <div class="plain-button reply-button"
+             ng-click="addingReply($index, $event, note.id, note.author, note.step_id)"
+             ng-if="note.category === 'other' && (note.extra_info|lowercase) === 'question'">
+                Post Answer
+        </div>
         <div class="note-author">Submitted by {{note.author}}</div>
         <div ng-if="note.replies.length > 0">Has replies.</div>
     </div>
