--- a/app/scripts/templates/note.html
+++ b/app/scripts/templates/note.html
@@ -2,7 +2,8 @@
     note.category === 'corrections' ? 'note-corrections' :
     (note.category === 'methods' ? 'note-methods' :
     (note.category === 'details' ? 'note-details' :
-    (note.category === 'other' ? 'note-other' : '')))">
+    (note.category === 'questions' ? 'note-questions' :
+    (note.category === 'other' ? 'note-other' : ''))))">
 
     <div ng-if="note.category === 'methods'">Note relevant for: {{note.extra_info}}</div>
     <div ng-if="note.category === 'other'">Note category: {{note.extra_info}}</div>
@@ -10,7 +11,7 @@
     <div class="comment-footer">
         <button class="plain-button reply-button"
              ng-click="addReply($index, $event, note.id, note.author, note.step_id)"
-             ng-if="note.category === 'other' && (note.extra_info|lowercase) === 'question'">
+             ng-if="note.category === 'questions'">
                 Post Answer
         </button>
         <div class="note-author">Submitted by {{note.author}}</div>
