--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -65,7 +65,7 @@ img{
   white-space: nowrap;
 }
 
-.selected-step{background-color: #ffffe0;}
+.selected-step{background-color: #F8FFDE;}
 
 .icon-details{
   background-image: url(../images/PNG/pin.png);
@@ -96,11 +96,11 @@ img{
   background-position: 0px 2px;
 }
 
-.selected-details, .note-details, .icon-details:hover{background-color: #dee9ff;}
-.selected-corrections, .note-corrections, .icon-corrections:hover{background-color: #ffdefa;}
-.selected-methods, .note-methods, .icon-methods:hover{background-color: #fff4de;}
-.selected-questions, .note-questions, .icon-questions:hover{background-color: #fff4de;}
-.selected-other, .note-other, .icon-other:hover{background-color: #deffe3;}
+.selected-details, .note-details, .icon-details:hover{background-color: #DEE9FF;}
+.selected-corrections, .note-corrections, .icon-corrections:hover{background-color: #FDCFDA;}
+.selected-methods, .note-methods, .icon-methods:hover{background-color: #FFF2DA;}
+.selected-questions, .note-questions, .icon-questions:hover{background-color: #F9DDF5;}
+.selected-other, .note-other, .icon-other:hover{background-color: #EAFFDE;}
 
 .note:before{
   background-color: #fff;
@@ -166,11 +166,6 @@ img{
   height: 30px;
   position: absolute;
   width: 30px;
-}
-
-.question-start{
-  background-image: url(../images/PNG/tag-add-white-question.png);
-  margin-left: 35px;
 }
 
 .input-start:hover{background-color: #f5f5f5;}
