bug fixed, replies' authors are checked

--- a/app/scripts/templates/note.html
+++ b/app/scripts/templates/note.html
@@ -20,6 +20,6 @@
                 Reply
         </button>
         <div class="note-author">Submitted by {{note.author}}</div>
-        <note ng-if="note.replies.length > 0" ng-repeat="reply in note.replies" note="reply" add-reply="addReply" baseline="baseline"></note>
+        <note ng-repeat="reply in note.replies" ng-if="note.replies.length > 0 && canShowNote(reply)" note="reply" add-reply="addReply" can-show-note="canShowNote" baseline="baseline"></note>
     </div>
 </div>
