--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -347,6 +347,9 @@ h2{
   position:relative;
   outline:none;
 }
+.window-button:hover{
+  border-bottom:3px solid grey;
+}
 
 .selected-button{
   border-bottom:3px solid grey;
