new submission box

--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -69,7 +69,7 @@ img{
   white-space: nowrap;
 }
 
-.selected-step{background-color: #F8FFDE;}
+.selected-step{background-color: #e6ffef;}
 
 .icon-details{
   background-image: url(../images/PNG/pin.png);
@@ -178,11 +178,12 @@ img{
 
 .input-container{
   background-color: #fff;
-  border: 1px solid black;
+  border: 1px solid grey;
   font-size: 0.9em;
   margin: 0 0 0 -80px;
   padding: 5px;
-  position: absolute;
+  position: fixed;
+  overflow-y: auto;
 }
 
 .description{
@@ -337,12 +338,8 @@ h2{
 .window-title{
   font-weight:bold;
   color:darkgrey;
+  margin-left:15px;
   float:left;
-}
-
-.type-title {
-  margin-left:8%;
-  margin-right:15%;
 }
 
 .suggestion-title{
@@ -355,18 +352,14 @@ h2{
   margin-right:10%;
 }
 
-.window-button{
-  clear:both;
+.selected-steps{
   font-weight:bold;
   color:grey;
   padding: 0 15px;
   position:relative;
   outline:none;
   margin-bottom:2px;
-
-}
-.window-button:hover{
-  border-bottom:3px solid grey;
+  font-size: 0.8em
 }
 
 .selected-button{
@@ -398,12 +391,22 @@ h2{
  z-index:1;
 }
 
-.close-button{
-  margin-left: 180px;
+.close-button-first{
   font-size: 0.8em;
+  margin-left:80px;
 
 }
-.close-button:hover{
+
+.close-button-second{
+  font-size: 0.8em;
+  margin-left:111px;
+}
+
+.close-button-first:hover{
+  text-decoration:underline black;
+}
+
+.close-button-second:hover{
   text-decoration:underline black;
 }
 
@@ -412,7 +415,6 @@ h2{
   font-size: 75%;
   margin:0px 10px;
   float:right;
-
 }
 
 .rating-button{
@@ -422,5 +424,40 @@ h2{
   border: 1px solid #9b9b9b;
   padding: 0 5px;
   margin-left:195px;
+}
 
+.step-list{
+  border-top:1px solid grey;
+  padding:2px 0px;
+  padding-left:15px;
+  text-align:left;
+  font-weight:bold;
+  color:grey;
+}
+
+.add-step-button{
+  float:right;
+  border-left:2px solid grey;
+  padding:2px 10px;
+  outline:none;
+}
+
+.add-step-button:hover{
+  background: lightblue;
+}
+
+.selected-add-button{
+  background: lightblue;
+}
+
+.menu-button{
+  margin-left:60px;
+}
+
+.date{
+  font-size: 0.6em;
+}
+
+.menu-button:hover{
+  text-decoration:underline black;
 }
