ordered notes by rating

--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -69,7 +69,7 @@ img{
   white-space: nowrap;
 }
 
-.selected-step{background-color: #e6ffef;}
+.selected-step{background-color: #f6ffa4;}
 
 .icon-details{
   background-image: url(../images/PNG/pin.png);
@@ -340,6 +340,7 @@ h2{
   color:darkgrey;
   margin-left:15px;
   float:left;
+  outline:none;
 }
 
 .suggestion-title{
@@ -391,23 +392,21 @@ h2{
  z-index:1;
 }
 
-.close-button-first{
+.close-button{
   font-size: 0.8em;
+}
+
+.close-button-first{
   margin-left:25px;
   margin-right:10px;
 }
 
 .close-button-second{
-  font-size: 0.8em;
   margin-left:71px;
   margin-right:10px;
 }
 
-.close-button-first:hover{
-  text-decoration:underline black;
-}
-
-.close-button-second:hover{
+.close-button:hover{
   text-decoration:underline black;
 }
 
@@ -432,7 +431,7 @@ h2{
   font-size: 0.8em;
   border: 1px solid #9b9b9b;
   padding: 0 5px;
-  margin-left:195px;
+  margin-left:110px;
 }
 
 .step-list{
@@ -444,18 +443,18 @@ h2{
   color:grey;
 }
 
-.add-step-button{
+.menu-action-button{
   float:right;
   border-left:2px solid #e6e6e6;
   padding:2px 10px;
   outline:none;
 }
 
-.add-step-button:hover{
+.menu-action-button:hover{
   background: lightblue;
 }
 
-.selected-add-button{
+.selected-menu-button{
   background: lightblue;
 }
 
@@ -464,10 +463,10 @@ h2{
   float:left;
 }
 
-.date{
-  font-size: 0.6em;
-}
-
 .menu-button:hover{
   text-decoration:underline black;
+}
+
+.date{
+  font-size: 0.6em;
 }
