--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -101,7 +101,7 @@ img{
 }
 
 .selected-details, .note-details, .icon-details:hover{background-color: #DEE9FF;}
-.selected-corrections, .note-corrections, .icon-corrections:hover{background-color: #FDCFDA;}
+.selected-corrections, .note-corrections, .icon-corrections:hover{background-color: #FDCFDA;z-index:1;}
 .selected-methods, .note-methods, .icon-methods:hover{background-color: #FFF2DA;}
 .selected-questions, .note-questions, .icon-questions:hover{background-color: #F9DDF5;}
 .selected-other, .note-other, .icon-other:hover{background-color: #EAFFDE;}
@@ -186,6 +186,18 @@ img{
   overflow-y: auto;
 }
 
+.note-container{
+  border: 1px solid #9b9b9b;
+  overflow-y: auto;
+  padding: 10px;
+  background: rgba(255, 255, 186, 0.85);
+  position:fixed;
+  z-index: 2;
+  margin:10px 0;
+  right:0;
+  top:34px;
+}
+
 .description{
   border: 1px #ccc dotted;
   margin: 5px 0;
@@ -223,7 +235,7 @@ img{
 .baseline-container{
   background-color: #fff;
   border: 1px solid #9b9b9b;
-  margin: 44px 0 0 -80px;
+  margin: 44px 0 0 -10px;
   overflow-y: auto;
   padding: 10px;
   position: fixed;
