--- a/app/scripts/templates/note.html
+++ b/app/scripts/templates/note.html
@@ -23,7 +23,7 @@
                 Reply
         </button>
         <div class="note-rating" ng-if="note.rating!=0">
-            <div ng-if="note.rating!=1">{{note.rating}} peoplee found this note helpful.</div>
+            <div ng-if="note.rating!=1">{{note.rating}} people found this note helpful.</div>
             <div ng-if="note.rating==1">{{note.rating}} person found this note helpful.</div>
         </div>
         <note ng-repeat="reply in note.replies" ng-if="note.replies.length > 0 && canShowNote(reply)" note="reply" delete-it = "deleteIt" rate-it = "rateIt" add-reply="addReply" can-show-note="canShowNote" baseline="baseline"></note>
