--- a/app/scripts/templates/note.html
+++ b/app/scripts/templates/note.html
@@ -4,8 +4,8 @@
     (note.category === 'details' && !baseline ? 'note-details' :
     (note.category === 'questions' && !baseline ? 'note-questions' :
     (note.category === 'other' && !baseline ? 'note-other' : 'baseline-content')))))">
-    <button ng-click="deleteIt(note.id)" class="plain-button delete-button">Delete</button>
-    <button class="rating-button" ng-click="rateIt(note.id)">^</button>
+    <button ng-click="deleteIt(note.id)" class="plain-button delete-button">DELETE</button>
+    <button class="rating-button" ng-click="rateIt(note.id)" tooltip="recommend"></button>
     <div class="note-contributor">Submitted by {{note.contributor}} -</div>
     <div class="date">{{note.dateSubmitted}}<br></div>
     <div ng-if="note.category === 'methods'">Note relevant for: {{note.extra_info}}</div>
@@ -15,16 +15,17 @@
         <button class="plain-button reply-button"
              ng-click="addReply($index, $event, note.id, note.contributor, note.step_id)"
              ng-if="note.category === 'questions' && !baseline">
-                Post Answer
+                Add Answer
         </button>
         <button class="plain-button reply-button"
             ng-click="addReply($index, $event, note.id, note.contributor, note.step_id)"
             ng-if="baseline">
                 Reply
         </button>
-        <div class="note-rating" ng-if="note.rating!=0">
-            <div ng-if="note.rating!=1">{{note.rating}} people found this note helpful.</div>
+        <div class="note-rating">
+            <div ng-if="note.rating>1">{{note.rating}} people found this note helpful.</div>
             <div ng-if="note.rating==1">{{note.rating}} person found this note helpful.</div>
+            <div ng-if="note.rating<1">No Rating.</div>
         </div>
         <note ng-repeat="reply in note.replies" ng-if="note.replies.length > 0 && canShowNote(reply)" note="reply" delete-it = "deleteIt" rate-it = "rateIt" add-reply="addReply" can-show-note="canShowNote" baseline="baseline"></note>
     </div>
